force-app/main/default/objects/LicenseType__c/LicenseType__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>License Type</label>
    <nameField>
        <label>License Type Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>