force-app/main/default/objects/LicenseType__c/fields/AbleToInactivate__c.field-meta.xml
<CustomField>
    <fullName>AbleToInactivate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint KN081419 - Created for PVL</description>
    <inlineHelpText>Is this License Type able to hold an Inactive Status?</inlineHelpText>
    <label>Able To Inactivate?</label>
    <type>Checkbox</type>
</CustomField>