force-app/main/default/objects/LicenseType__c/fields/AccountDependencyRequired__c.field-meta.xml
<CustomField>
    <fullName>AccountDependencyRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN112619-Created for PVL Sprint 2 Phase 1</description>
    <label>Account Dependency Required?</label>
    <type>Checkbox</type>
</CustomField>