force-app/main/default/objects/LicenseType__c/fields/AccountPageLayout__c.field-meta.xml
<CustomField>
    <fullName>AccountPageLayout__c</fullName>
    <description>PacPoint-MV010419 - Created for PVL phase 1</description>
    <formula>CASE( AccountType__c , &apos;Person Account&apos;, &apos;PVL Person Account Layout - Wizard&apos;, &apos;PVL Business Account Layout - Wizard&apos;)</formula>
    <label>Account Page Layout</label>
    <type>Text</type>
</CustomField>