force-app/main/default/objects/LicenseType__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1
Used to specify if the license type is used for &quot;Business Account&quot; or &quot;Person Account&quot;</description>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Account</fullName>
            </value>
            <value>
                <fullName>Person Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>