force-app/main/default/objects/LicenseType__c/fields/ActiveInactiveDuetoInsuranceLoss__c.field-meta.xml
<CustomField>
    <fullName>ActiveInactiveDuetoInsuranceLoss__c</fullName>
    <description>PacPoint-KN07292020-Created for PVL Phase 1 Sprint 6</description>
    <label>Active/Inactive Due to Insurance Loss</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>