force-app/main/default/objects/LicenseType__c/fields/ActiveInactiveDuetoLossofDependent__c.field-meta.xml
<CustomField>
    <fullName>ActiveInactiveDuetoLossofDependent__c</fullName>
    <description>PacPoint FT110719 - Created for PVL</description>
    <label>Active/Inactive Due to Loss of Dependent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>