force-app/main/default/objects/LicenseType__c/fields/ActiveInactiveDuetoNonRenewal__c.field-meta.xml
<CustomField>
    <fullName>ActiveInactiveDuetoNonRenewal__c</fullName>
    <description>PacPoint FT110719 - Created for PVL</description>
    <label>Active/Inactive Due to Non Renewal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>