force-app/main/default/objects/LicenseType__c/fields/ADDCApprovalLetter__c.field-meta.xml
<CustomField>
    <fullName>ADDCApprovalLetter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-DN03022021</description>
    <label>ADDC Approval Letter</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (ADDC Approval Letter)</relationshipLabel>
    <relationshipName>License_TypesCQbm</relationshipName>
    <type>Lookup</type>
</CustomField>