force-app/main/default/objects/LicenseType__c/fields/AddDurationonButtons__c.field-meta.xml
<CustomField>
    <fullName>AddDurationonButtons__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN102419-Created for PVl Sprint 2 Phase 1</description>
    <inlineHelpText>Check this box if this License Type adds the Complete By Duration to the Complete Application By Date every-time a button is clicked on the Application.</inlineHelpText>
    <label>Add Duration on Buttons</label>
    <type>Checkbox</type>
</CustomField>