force-app/main/default/objects/LicenseType__c/fields/ADDPApprovedLetter__c.field-meta.xml
<CustomField>
    <fullName>ADDPApprovedLetter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-DN10227020 - Created for PVL Sprint 7 Phase 1</description>
    <label>ADDP Approved Letter</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (ADDP Approved Letter)</relationshipLabel>
    <relationshipName>License_TypesSDfL</relationshipName>
    <type>Lookup</type>
</CustomField>