force-app/main/default/objects/LicenseType__c/fields/AllowGroupTransactionsOnline__c.field-meta.xml
<CustomField>
    <fullName>AllowGroupTransactionsOnline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Group Transactions Online</label>
    <type>Checkbox</type>
</CustomField>