force-app/main/default/objects/LicenseType__c/fields/ApplicationFees__c.field-meta.xml
<CustomField>
    <fullName>ApplicationFees__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-FT100519 - Created for PVL phase 1</description>
    <label>Application Fees</label>
    <type>Checkbox</type>
</CustomField>