force-app/main/default/objects/LicenseType__c/fields/ApplicationPageLayout__c.field-meta.xml
<CustomField>
    <fullName>ApplicationPageLayout__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1
Used to specify the application page layout to be used to create application from the application wizard.</description>
    <label>Application Page Layout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>