force-app/main/default/objects/LicenseType__c/fields/ApplicationRecordType__c.field-meta.xml
<CustomField>
    <fullName>ApplicationRecordType__c</fullName>
    <description>PacPoint-FN111419-Created for Sprint 2 Phase 1</description>
    <inlineHelpText>This is a mapping of the License Type to the Application Record Type that will get created.</inlineHelpText>
    <label>Application Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>