force-app/main/default/objects/LicenseType__c/fields/ApplicationRespondByInDays__c.field-meta.xml
<CustomField>
    <fullName>ApplicationRespondByInDays__c</fullName>
    <description>PacPoint-KN06092020-Created for PVL Phase 1 Sprint 5</description>
    <inlineHelpText>This field is used for Timeshare and Subdivision. It is used to populate the &apos;Application Respond By Date&apos; on the Application.</inlineHelpText>
    <label>Application Respond By (In Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>