force-app/main/default/objects/LicenseType__c/fields/Apprentice__c.field-meta.xml
<CustomField>
    <fullName>Apprentice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-FT112619 - Created for PVL phase 1</description>
    <label>Apprentice</label>
    <type>Checkbox</type>
</CustomField>