force-app/main/default/objects/LicenseType__c/fields/ApprenticeRegistrationNotification__c.field-meta.xml
<CustomField>
    <fullName>ApprenticeRegistrationNotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN112619-Created For PVL Sprint 2 Phase 1</description>
    <label>Verification of Hours Notification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (Doc Generator Settings)</relationshipLabel>
    <relationshipName>License_Types5</relationshipName>
    <type>Lookup</type>
</CustomField>