force-app/main/default/objects/LicenseType__c/fields/AssociatedLicenseRelationship__c.field-meta.xml
<CustomField>
    <fullName>AssociatedLicenseRelationship__c</fullName>
    <description>PacPoint-KN01-25-2022 - Created for Case 19573</description>
    <label>Associated License Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EmployeeLicense</fullName>
            </value>
            <value>
                <fullName>EntityLicense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>