force-app/main/default/objects/LicenseType__c/fields/Audit_Method_of_Licensure__c.field-meta.xml
<CustomField>
    <fullName>Audit_Method_of_Licensure__c</fullName>
    <label>Audit Method of Licensure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MethodofLicensure</valueSetName>
    </valueSet>
</CustomField>