force-app/main/default/objects/LicenseType__c/fields/Audit_Method_of_Licensure_Selection__c.field-meta.xml
<CustomField>
    <fullName>Audit_Method_of_Licensure_Selection__c</fullName>
    <label>Audit Method of Licensure Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Query all licenses</fullName>
            </value>
            <value>
                <fullName>Query Method of Licensure only</fullName>
            </value>
            <value>
                <fullName>Query Null Method of Licensure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>