force-app/main/default/objects/LicenseType__c/fields/AuditActiveInactive__c.field-meta.xml
<CustomField>
    <fullName>AuditActiveInactive__c</fullName>
    <description>PacPoint-FT080719- Created for PVL phase 1</description>
    <inlineHelpText>Use for Random Audit.  If &quot;Active Only&quot; is selected, the Random Audit will look at only Active Licenses.  if &quot;Active and Inactive&quot; is selected, the Random Audit will look at both Active and Inactive Licenses</inlineHelpText>
    <label>Audit Active / Inactive</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>