force-app/main/default/objects/LicenseType__c/fields/AuditCushionPercent__c.field-meta.xml
<CustomField>
    <fullName>AuditCushionPercent__c</fullName>
    <description>PacPoint-FT080719- Created for PVL phase 1</description>
    <inlineHelpText>This is the % of the Licenses that the system will flag for Audit.  This is above the % required by statute.</inlineHelpText>
    <label>Audit Cushion %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>