force-app/main/default/objects/LicenseType__c/fields/AuditNotificationText__c.field-meta.xml
<CustomField>
    <fullName>AuditNotificationText__c</fullName>
    <description>PacPoint-FT081119 - Created for PVL phase 1</description>
    <inlineHelpText>Contains the text that will get generated on the Audit Letter that gets sent.</inlineHelpText>
    <label>Audit Notification Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>