force-app/main/default/objects/LicenseType__c/fields/AuditPercent__c.field-meta.xml
<CustomField>
    <fullName>AuditPercent__c</fullName>
    <description>PacPoint-FT080719- Created for PVL phase 1</description>
    <inlineHelpText>This is the % audit that is required per statute.</inlineHelpText>
    <label>Audit %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>