force-app/main/default/objects/LicenseType__c/fields/AuditStatuses__c.field-meta.xml
<CustomField>
    <fullName>AuditStatuses__c</fullName>
    <description>PacPoint-FT080919 - Created for PVL phase 1</description>
    <inlineHelpText>The statuses selected here will be subjected to the random audit.</inlineHelpText>
    <label>Audit Statuses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LicenseStatuses</valueSetName>
    </valueSet>
</CustomField>