force-app/main/default/objects/LicenseType__c/fields/AuditType__c.field-meta.xml
<CustomField>
    <fullName>AuditType__c</fullName>
    <description>PacPoint-FT080719- Created for PVL phase 1</description>
    <inlineHelpText>Indicates if the License Type is subjected to Random Audit and if so, whether it is a Pre Renewal Audit or a Post Renewal Audit.</inlineHelpText>
    <label>Audit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Audit</fullName>
            </value>
            <value>
                <fullName>Post-Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>