force-app/main/default/objects/LicenseType__c/fields/AuthorizedMakeModel__c.field-meta.xml
<CustomField>
    <fullName>AuthorizedMakeModel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>“Y” if Authorized Make/Model data is maintained for this license type.</inlineHelpText>
    <label>Authorized Make/Model</label>
    <type>Checkbox</type>
</CustomField>