force-app/main/default/objects/LicenseType__c/fields/AutoForfeiturePeriod__c.field-meta.xml
<CustomField>
    <fullName>AutoForfeiturePeriod__c</fullName>
    <description>PacPoint-IC071619- Created for PVL phase 1</description>
    <label>Auto Forfeiture Period (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>