force-app/main/default/objects/LicenseType__c/fields/AutoForfeitureStatduetoDepNonRen__c.field-meta.xml
<CustomField>
    <fullName>AutoForfeitureStatduetoDepNonRen__c</fullName>
    <description>PacPoint-FT110519- Created for PVL phase 1</description>
    <label>Auto Forfeiture Stat due to Dep Non-Ren</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LicenseStatuses</valueSetName>
    </valueSet>
</CustomField>