force-app/main/default/objects/LicenseType__c/fields/AutoForfeitureStatus__c.field-meta.xml
<CustomField>
    <fullName>AutoForfeitureStatus__c</fullName>
    <description>PacPoint-KN081619 - Created for PVL Phase 1</description>
    <label>Auto Forfeiture Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LicenseStatuses</valueSetName>
    </valueSet>
</CustomField>