force-app/main/default/objects/LicenseType__c/fields/BatchConditionField__c.field-meta.xml
<CustomField>
    <fullName>BatchConditionField__c</fullName>
    <description>PacPoint-AZ011920 - Created for PVL phase 1</description>
    <label>Batch Condition Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>