force-app/main/default/objects/LicenseType__c/fields/BatchUpdateField__c.field-meta.xml
<CustomField>
    <fullName>BatchUpdateField__c</fullName>
    <description>Used to specify the field for batch update
PacPoint-AZ011920 - Created for PVL phase 1</description>
    <label>Batch Update Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>