force-app/main/default/objects/LicenseType__c/fields/BatchUpdateValue__c.field-meta.xml
<CustomField>
    <fullName>BatchUpdateValue__c</fullName>
    <description>PacPoint-AZ011920 - Created for PVL phase 1</description>
    <label>Batch Update Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>