force-app/main/default/objects/LicenseType__c/fields/BoardProgram__c.field-meta.xml
<CustomField>
    <fullName>BoardProgram__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Board / Program</label>
    <referenceTo>BoardProgram__c</referenceTo>
    <relationshipLabel>License Types</relationshipLabel>
    <relationshipName>License_Types</relationshipName>
    <type>Lookup</type>
</CustomField>