force-app/main/default/objects/LicenseType__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-FT120419 - Created for PVL phase 1</description>
    <label>Branch</label>
    <type>Checkbox</type>
</CustomField>