force-app/main/default/objects/LicenseType__c/fields/BreakinInsuranceCoverageAllowed__c.field-meta.xml
<CustomField>
    <fullName>BreakinInsuranceCoverageAllowed__c</fullName>
    <description>PacPoint-KN081519 - Created for PVL Phase 1</description>
    <inlineHelpText>In Days</inlineHelpText>
    <label>Break in Insurance Coverage Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>