force-app/main/default/objects/LicenseType__c/fields/CERequired__c.field-meta.xml
<CustomField>
    <fullName>CERequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN04092020-Created for PVL Phase 1 Sprint 3</description>
    <inlineHelpText>Used for License Lightning Page</inlineHelpText>
    <label>CE Required?</label>
    <type>Checkbox</type>
</CustomField>