force-app/main/default/objects/LicenseType__c/fields/CheckoutTemplate__c.field-meta.xml
<CustomField>
    <fullName>CheckoutTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN112619-Created for PVL Sprint 2 Phase 1</description>
    <label>Checkout Template</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (Checkout Template)</relationshipLabel>
    <relationshipName>License_Types6</relationshipName>
    <type>Lookup</type>
</CustomField>