force-app/main/default/objects/LicenseType__c/fields/ClassificationCheckRequired__c.field-meta.xml
<CustomField>
    <fullName>ClassificationCheckRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Classification Check Required</label>
    <type>Checkbox</type>
</CustomField>