force-app/main/default/objects/LicenseType__c/fields/ClassStatusDuetoLossof_Dependent__c.field-meta.xml
<CustomField>
    <fullName>ClassStatusDuetoLossof_Dependent__c</fullName>
    <description>PacPoint-FT110519- Created for PVL phase 1</description>
    <label>Class Status Due to Loss of Dependent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C - Current, Valid &amp; In Good Standing</fullName>
            </value>
            <value>
                <fullName>I - Class No Longer Active (No RME/Firm, No EMPR)</fullName>
            </value>
            <value>
                <fullName>F - Class No Longer Active (License Forfeited)</fullName>
            </value>
            <value>
                <fullName>D - Class No Longer Active (License Delinquent)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>