force-app/main/default/objects/LicenseType__c/fields/ClassStatusDuetoNonRenewal__c.field-meta.xml
<CustomField>
    <fullName>ClassStatusDuetoNonRenewal__c</fullName>
    <description>PacPoint-KN02032020- Created for PVL Phase 1 Sprint 2</description>
    <label>Class Status Due to Non Renewal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C - Current, Valid &amp; In Good Standing</fullName>
            </value>
            <value>
                <fullName>I - Class No Longer Active (No RME/Firm, No EMPR)</fullName>
            </value>
            <value>
                <fullName>F - Class No Longer Active (License Forfeited)</fullName>
            </value>
            <value>
                <fullName>D - Class No Longer Active (License Delinquent)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>