force-app/main/default/objects/LicenseType__c/fields/ClearAuditInformation__c.field-meta.xml
<CustomField>
    <fullName>ClearAuditInformation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clear Audit Information</label>
    <type>Checkbox</type>
</CustomField>