force-app/main/default/objects/LicenseType__c/fields/CompletebyDuration__c.field-meta.xml
<CustomField>
    <fullName>CompletebyDuration__c</fullName>
    <description>PacPoint-IC071619- Created for PVL phase 1</description>
    <inlineHelpText>The number of months the applicant has to complete the application from the time the application is received</inlineHelpText>
    <label>Complete by Duration (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>