force-app/main/default/objects/LicenseType__c/fields/ContinuousInsuranceRequired__c.field-meta.xml
<CustomField>
    <fullName>ContinuousInsuranceRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN081519 - Created for PVL Phase 1</description>
    <label>Continuous Insurance Required</label>
    <type>Checkbox</type>
</CustomField>