force-app/main/default/objects/LicenseType__c/fields/CoreHoursRequired__c.field-meta.xml
<CustomField>
    <fullName>CoreHoursRequired__c</fullName>
    <label>Core Hours Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>