force-app/main/default/objects/LicenseType__c/fields/CurrentFeePeriod__c.field-meta.xml
<CustomField>
    <fullName>CurrentFeePeriod__c</fullName>
    <description>PacPoint-IC071619- Created for PVL phase 1</description>
    <formula>IF( (LicenseTypeExpireDate__c - TODAY()) / 365 * 12 &gt; ( DurationofLicenseInMonths__c / 2) , &quot;Full Fee&quot;, &quot;Half Fee&quot;)</formula>
    <label>Current Fee Period</label>
    <type>Text</type>
</CustomField>