force-app/main/default/objects/LicenseType__c/fields/D1Message__c.field-meta.xml
<CustomField>
    <fullName>D1Message__c</fullName>
    <formula>CASE(
Name , 
&quot;RBO&quot;, &quot;You must populate the Dependent License field with a RB license that is current.&quot;,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D1 Message</label>
    <type>Text</type>
</CustomField>