force-app/main/default/objects/LicenseType__c/fields/D2CERequired__c.field-meta.xml
<CustomField>
    <fullName>D2CERequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>D2 CE Required</label>
    <type>Checkbox</type>
</CustomField>