force-app/main/default/objects/LicenseType__c/fields/DateofBirthRequiredonApplication__c.field-meta.xml
<CustomField>
    <fullName>DateofBirthRequiredonApplication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Date of Birth Required on Application</label>
    <type>Checkbox</type>
</CustomField>