force-app/main/default/objects/LicenseType__c/fields/DateRenewalPrinted__c.field-meta.xml
<CustomField>
    <fullName>DateRenewalPrinted__c</fullName>
    <label>Date Renewal Printed</label>
    <type>Date</type>
</CustomField>