force-app/main/default/objects/LicenseType__c/fields/DaysafterBoardNoticeuntilForfeiture__c.field-meta.xml
<CustomField>
    <fullName>DaysafterBoardNoticeuntilForfeiture__c</fullName>
    <label>Days after Board Notice until Forfeiture</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>