force-app/main/default/objects/LicenseType__c/fields/DCCAAccountingOfficeLateRenewalInfo__c.field-meta.xml
<CustomField>
    <fullName>DCCAAccountingOfficeLateRenewalInfo__c</fullName>
    <description>PacPoint-KN111919-Created for PVL Sprint 2 Phase 1</description>
    <inlineHelpText>This field is used on the Renewal Notifications to display the Cashier Codes for the corresponding License Type. This field has to be manually updated before each Renewal Notification generation.</inlineHelpText>
    <label>DCCA Accounting Office Late Renewal Info</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>