force-app/main/default/objects/LicenseType__c/fields/DefaultClassStatus__c.field-meta.xml
<CustomField>
    <fullName>DefaultClassStatus__c</fullName>
    <description>PacPoint-KN103119-Created for PVL Sprint 2 Phase 1</description>
    <label>Default Class Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CW - Class Withdrawn by Applicant</fullName>
            </value>
            <value>
                <fullName>H - Class Deferred by Board</fullName>
            </value>
            <value>
                <fullName>HC - Application Completed</fullName>
            </value>
            <value>
                <fullName>NE - No Exam Required--Class to be Licensed</fullName>
            </value>
            <value>
                <fullName>P - Passed Exam--Class to be Licensed</fullName>
            </value>
            <value>
                <fullName>U - Class No Longer Needed Due To Upgrade To Higher Class</fullName>
            </value>
            <value>
                <fullName>W - Awaiting Approval/Exam</fullName>
                <default>true</default>
                <label>W - Awaiting Approval/Exam</label>
            </value>
            <value>
                <fullName>NA - No Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>