force-app/main/default/objects/LicenseType__c/fields/DeficiencyNotification__c.field-meta.xml
<CustomField>
    <fullName>DeficiencyNotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN111829-Created for PVL Sprint 2 Phase 1</description>
    <inlineHelpText>This is the template used to generate the Deficiency (A3 and/or L3) Letter.</inlineHelpText>
    <label>Deficiency Notification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types</relationshipLabel>
    <relationshipName>License_Types</relationshipName>
    <type>Lookup</type>
</CustomField>