force-app/main/default/objects/LicenseType__c/fields/DependencyRequired__c.field-meta.xml
<CustomField>
    <fullName>DependencyRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN092719 - Created for PVL Phase 1</description>
    <label>Dependency Required?</label>
    <type>Checkbox</type>
</CustomField>