force-app/main/default/objects/LicenseType__c/fields/DependencyRequirement__c.field-meta.xml
<CustomField>
    <fullName>DependencyRequirement__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Dependency Requirement</label>
    <type>TextArea</type>
</CustomField>