force-app/main/default/objects/LicenseType__c/fields/DependentLicense__c.field-meta.xml
<CustomField>
    <fullName>DependentLicense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-IC071619- Created for PVL phase 1</description>
    <label>Dependent License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>License Types</relationshipLabel>
    <relationshipName>LicenseTypes</relationshipName>
    <type>Lookup</type>
</CustomField>