force-app/main/default/objects/LicenseType__c/fields/DependentLicenseType2__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseType2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependent License Type 2</label>
    <referenceTo>LicenseType__c</referenceTo>
    <relationshipLabel>License Types (Dependent License Type 2)</relationshipLabel>
    <relationshipName>License_Types3</relationshipName>
    <type>Lookup</type>
</CustomField>