force-app/main/default/objects/LicenseType__c/fields/DependentLicenseType__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN112619-Created for PVL Sprint 2 Phase 1</description>
    <inlineHelpText>Which License Type is this License Type Dependent on?</inlineHelpText>
    <label>Dependent License Type</label>
    <referenceTo>LicenseType__c</referenceTo>
    <relationshipLabel>License Types</relationshipLabel>
    <relationshipName>License_Types</relationshipName>
    <type>Lookup</type>
</CustomField>