force-app/main/default/objects/LicenseType__c/fields/DualRMELosesEmployerDuetoInsurance__c.field-meta.xml
<CustomField>
    <fullName>DualRMELosesEmployerDuetoInsurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>JF 4/12/23- Created for Case 24075</description>
    <label>Dual RME Loses Employer Due to Insurance</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (Dual RME Loses Employer Due to Insurance)</relationshipLabel>
    <relationshipName>License_Types9hvm</relationshipName>
    <type>Lookup</type>
</CustomField>