force-app/main/default/objects/LicenseType__c/fields/DualRMELosesEmployerNotification__c.field-meta.xml
<CustomField>
    <fullName>DualRMELosesEmployerNotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN04142020-Created for PVL Phase 1 Sprint 3</description>
    <label>Dual RME Loses Employer Notification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (Dual RME Loses Employer Notification)</relationshipLabel>
    <relationshipName>License_TypespLoF</relationshipName>
    <type>Lookup</type>
</CustomField>